feat: add endpoint event with eventIT + implementation
